# mrtgen

./: .dockerignore  .gitignore  Cargo.toml  README.md
src/: bgp.rs  flowspec.rs  generator.rs  invalid.rs  lib.rs  main.rs  manifest.rs  records.rs  routes.rs  types.rs  writer.rs
tests/: corpus.rs
tests/parsers/: run-docker.sh  slice-corpus.py
tests/parsers/docker/: bgpdump.Dockerfile  bgpkit-parser.Dockerfile  mrtparse.Dockerfile
tests/parsers/runners/: bgpdump_check.sh  bgpkit_parser_check.sh  mrtparse_check.py
