[package]
name = "mrtgen"
version = "0.1.0"
edition = "2021"
description = "Deterministic synthetic MRT (RFC 6396/6397/8050) file generator for parser CI testing"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "mrtgen"
path = "src/lib.rs"

[[bin]]
name = "mrtgen"
path = "src/main.rs"
